terraform/component_eks/ingress/traefik-public.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: traefik
  annotations:
    kubernetes.io/ingress.class: private-ingress
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  name: public-ingress-traefik-dash
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: public-ingress-traefik-dashboard
          servicePort: dashboard-http
        path: /traefik-public
